--- a/src/upload.html
+++ b/src/upload.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>Введите данные</h1>
-    <form action="/upload" method="POST" enctype="multipart/form-data">
-      <input name="foo" type="file" />
+    <form action="/upload" method="POST" enctype="multipart/form-data" >
+      <input name="userFile" type="file" multiple/>
       <input type="submit" value="upload2" />
     </form>
   </body>
